<resources>
    <string name="app_name">LoginItes</string>
    <string name="ingresar">Ingresar</string>
    <string name="ingrese_su_nombre">Ingrese su nombre</string>
    <string name="ingrese_su_contrase_a">Ingrese su contraseña</string>
    <string name="bienvenido_de_nuevo">Bienvenido de nuevo</string>
    <string name="crear_usuario">Sin registrar? Crear usuario</string>
    <string name="recordar_usuario">Recordar usuario</string>
    <string name="logo">Logo</string>
</resources>